Add cross-JDK matrix runner with Lucene-tuned GC opts; smoke-tested Java 11/17/21/25
Agent-Logs-Url: https://github.com/ashok-a-7178/LuceneReaderPer/sessions/f8b2038f-a433-4af0-8ee8-aa18da4cbe43

Co-authored-by: ashok-a-7178 <192103005+ashok-a-7178@users.noreply.github.com>